[project]
name = "camp-registration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carlos Avellaneda", email = "carlos.avellaneda8+1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyairtable>=3.0.1",
    "pydantic>=2.10.6",
    "streamlit>=1.42.2",
]

[project.scripts]
camp-registration = "camp_registration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
